--- a/src/css/home/Header.css
+++ b/src/css/home/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background: darkcyan;
+    background: red;
     display: flex;
     flex-direction: column;
     align-items: right;
@@ -15,8 +15,8 @@
 
 .githubBtn {
     background: transparent;
-    background-color: darkcyan;
-    border-color: darkcyan;
+    background-color: black;
+    border-color: black;
     border-style: solid;
     width: 40px;
     height: 40px;
@@ -24,8 +24,8 @@
 
 .instagramBtn {
     background: transparent;
-    background-color: darkcyan;
-    border-color: darkcyan;
+    background-color: black;
+    border-color: black;
     border-style: solid;
     width: 40px;
     height: 40px;
@@ -33,8 +33,8 @@
 
 .linkedinBtn {
     background: transparent;
-    background-color: darkcyan;
-    border-color: darkcyan;
+    background-color: black;
+    border-color: black;
     border-style: solid;
     width: 40px;
     height: 40px;
