--- a/src/css/home/Header.css
+++ b/src/css/home/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background: red;
+    background: black;
     display: flex;
     flex-direction: column;
     align-items: right;
@@ -20,6 +20,7 @@
     border-style: solid;
     width: 40px;
     height: 40px;
+    cursor: pointer;
 }
 
 .instagramBtn {
@@ -29,6 +30,7 @@
     border-style: solid;
     width: 40px;
     height: 40px;
+    cursor: pointer;
 }
 
 .linkedinBtn {
@@ -38,6 +40,7 @@
     border-style: solid;
     width: 40px;
     height: 40px;
+    cursor: pointer;
 }
 
 .actualLinkedinBtn {
@@ -53,4 +56,53 @@
 .actualInstagramBtn {
     width: 30px;
     height: 30px;
+}
+
+.navBar {
+    background: transparent;
+    background-color: black;
+    font-family: 'Bahnschrift';
+    font-size: 16px;
+}
+
+.Portfolio {
+    background: black;
+    border-style: hidden;
+    border-color: white;
+    text-align: left;
+    color: white;
+    margin: 10px 10px;
+    cursor: pointer;
+    text-transform: capitalize;
+    transition: ease white 250ms;
+    border-radius: 5px;
+    font-family: Bahnschrift;
+    font-size: 16px;
+}
+
+.Investigates {
+    background: black;
+    border-style: hidden;
+    border-color: white;
+    text-align: left;
+    color: white;
+    margin: 10px 10px;
+    cursor: pointer;
+    text-transform: capitalize;
+    transition: ease white 250ms;
+    border-radius: 5px;
+    font-family: Bahnschrift;
+    font-size: 16px;
+}
+
+.Portfolio:hover {
+    /*//text-decoration: underline;*/
+    text-decoration: underline;
+    text-decoration-thickness: from-font;
+}
+
+.Investigates:hover {
+    /*//text-decoration: underline;*/
+    text-decoration: underline;
+    text-decoration-thickness: from-font;
 }
