--- a/src/css/home/Body.css
+++ b/src/css/home/Body.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     background-color: black;
-    font-family: 'Bahnschrift';
+    font-family: 'Bahnschrift', ui-monospace;
 }
 
 /* @media all and (max-width: 1200px) and (min-width: 800px) {
@@ -32,7 +32,7 @@
     text-transform: capitalize;
     color: red;
     position: relative;
-    top: 52%
+    top: 47.5%
 }
 
 .desc {
