little bit of cleanup

--- a/src/css/pages/Investigates.css
+++ b/src/css/pages/Investigates.css
@@ -1,8 +1,4 @@
-. {
-    background-color: darkcyan;
-}
-
-.textHolder {
+.investigatesCon {
     width: 100vw;
     height: 100vh;
     display: flex;
