--- a/src/css/pages/Camera.css
+++ b/src/css/pages/Camera.css
@@ -1,4 +1,4 @@
-.portfolioCon {
+.cameraCon {
     width: 100vw;
     height: 90.550vh;
     display: flex;
@@ -7,7 +7,7 @@
     font-family: 'Bahnschrift', ui-monospace;
 }
 
-.portfolioText {
+.cameraText {
     text-transform: capitalize;
     font-size: 3.776vw;
     color: black;
