messing about with the changelog

--- a/src/css/home/Footer.css
+++ b/src/css/home/Footer.css
@@ -7,7 +7,7 @@
 .footerNavBar {
     background: transparent;
     font-family: Bahnschrift, ui-monospace;
-    font-size: 16px
+    font-size: 16px;
 }
 
 .Changelog {
