fix placeholder text

--- a/src/css/pages/Placeholder.css
+++ b/src/css/pages/Placeholder.css
@@ -1,9 +1,8 @@
 .placeholderCon {
     width: 100vw;
-    height: 90.55vh;
+    height: 90.550vh;
     display: flex;
     flex-direction: column;
-    background-color: lightgrey;
     font-family: 'Bahnschrift', ui-monospace;
 }
 
@@ -11,6 +10,7 @@
     text-transform: capitalize;
     font-size: 3.776vw;
     color: black;
+    position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
