fix camera button hover

--- a/src/css/elements/Header.css
+++ b/src/css/elements/Header.css
@@ -61,7 +61,7 @@
     text-decoration-thickness: from-font;
 }
 
-.Portfolio:hover {
+.Camera:hover {
     /*//text-decoration: underline;*/
     text-decoration: underline;
     text-decoration-thickness: from-font;
