--- a/src/css/home/MainPageHeader.css
+++ b/src/css/home/MainPageHeader.css
@@ -108,7 +108,7 @@
     text-decoration-thickness: from-font;
 }
 
-.Portfolio:hover {
+.Camera:hover {
     /*//text-decoration: underline;*/
     text-decoration: underline;
     text-decoration-thickness: from-font;
