--- a/src/css/pages/Planned.css
+++ b/src/css/pages/Planned.css
@@ -3,7 +3,7 @@
     height: 90.550vh;
     display: flex;
     flex-direction: column;
-    background-color: lightgrey;
+    background-color: antiquewhite;
     font-family: 'Bahnschrift', ui-monospace;
 }
 
