--- a/src/css/pages/Blog.css
+++ b/src/css/pages/Blog.css
@@ -1,4 +1,4 @@
-.investigatesCon {
+.blogCon {
     width: 100vw;
     height: 90.550vh;
     display: flex;
@@ -7,7 +7,7 @@
     font-family: 'Bahnschrift', ui-monospace;
 }
 
-.investigatesText {
+.blogText {
     text-transform: capitalize;
     font-size: 3.776vw;
     color: black;
